--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 
-  <title>Donation Client</title>
+  <title>WAHI</title>
 </head>
 <body>
 <div id="app"></div>
